# monsim

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
battle_builder_macro/: Cargo.toml
battle_builder_macro/src/: dsl_syntax.rs  lib.rs  syntax.rs
battle_context_macro/: Cargo.toml
battle_context_macro/src/: dsl_syntax.rs  lib.rs
battle_state_macro/: Cargo.toml
battle_state_macro/src/: customsyntax.rs  lib.rs
bcontext_macro/: Cargo.toml
bcontext_macro/src/: customsyntax.rs  lib.rs
event_derive_macro/: Cargo.toml
event_derive_macro/src/: lib.rs
event_handler_set_builder_macro/: Cargo.toml
event_handler_set_builder_macro/src/: lib.rs
event_setup_macro/: Cargo.toml
event_setup_macro/src/: lib.rs
mechanic_constructor_macro/: Cargo.toml
mechanic_constructor_macro/src/: lib.rs
monsim_macros/: Cargo.toml
monsim_macros/src/: lib.rs  syntax.rs
monsim_utils/: Cargo.toml
monsim_utils/src/: lib.rs  max_sized_vec.rs  outcome.rs  percentage.rs  team_affl.rs
monsim_utils/src/max_sized_vec/: tests.rs
src/: ability_dex.rs  action.rs  app.rs  app_2.rs  battle.rs  battle_context.rs  battle_sim.rs  cli.rs  debug.rs  entry_hazard_dex.rs  event.rs  game_mechanics.rs  global_constants.rs  io.rs  item_dex.rs  lib.rs  main.rs  monster_dex.rs  move_dex.rs  new_app.rs  old_app.rs  prng.rs  render.rs  rendering.rs  sim.rs  status_dex.rs  terminal_interface.rs  terrain_dex.rs  test.rs  trap_dex.rs  tui.rs  weather_dex.rs
src/app/: render.rs  ui.rs  update.rs
src/battle/: battle_constants.rs  battle_state.rs  entities.rs  type_chart.rs  utility_macros.rs
src/battle/entities/: monster_dex.rs  move_dex.rs
src/battle_sim/: action.rs  battle_context.rs  event.rs  game_mechanics.rs  global_constants.rs  io.rs  prng.rs
src/battle_sim/game_mechanics/: ability.rs  ability_dex.rs  monster.rs  monster_dex.rs  move_.rs  move_dex.rs
src/game_mechanics/: ability.rs  ability_dex.rs  monster.rs  monster_dex.rs  move_.rs  move_dex.rs
src/new_app/: ui.rs
src/old_app/: render.rs
src/sim/: action.rs  actions.rs  battle.rs  battle_constants.rs  battle_context.rs  choice.rs  context.rs  effects.rs  event.rs  event_dispatch.rs  event_dispatcher.rs  game_mechanics.rs  global_constants.rs  helpers.rs  io.rs  ordering.rs  prng.rs  targetting.rs
src/sim/battle/: builder.rs  builders.rs  message_log.rs
src/sim/event/: generated.rs
src/sim/event_dispatch/: events.rs  tests.rs
src/sim/event_dispatcher/: contexts.rs  events.rs  tests.rs
src/sim/game_mechanics/: ability.rs  ability_dex.rs  environment.rs  item.rs  monster.rs  monster_dex.rs  move_.rs  move_dex.rs  status.rs  team.rs  test_ability_dex.rs  test_item_dex.rs  test_monster_dex.rs  test_move_dex.rs  test_status_dex.rs  types.rs
src/sim/game_mechanics/environment/: entry_hazard.rs  terrain.rs  trap.rs  weather.rs
src/sim/game_mechanics/monster/: stats.rs
src/tui/: ui.rs
