[package]
name = "monsim"
version = "0.1.0"
edition = "2021"

[dependencies]
monsim_macros = { path = "monsim_macros", optional = true }
monsim_utils = { path = "monsim_utils" }
bitflags = "1.3.2"
tui = { version = "0.19.0", optional = true }
crossterm = { version = "0.26.0", optional = true }
const_format = { version = "0.2.30", optional = true }
chrono = { version = "0.4.24", optional = true }
tap = "1.0.1"

[lib]
name =  "monsim"
path = "src/lib.rs"

[[bin]]
name = "monsim"
path = "src/main.rs"

[features]
default = ["entity_fetchers"]
debug = ["const_format", "chrono"]
monsim_tui = ["tui", "crossterm"]
event_gen = ["monsim_macros/event_gen"]
entity_fetchers = ["monsim_macros/entity_fetchers"]
battle_builder = ["monsim_macros/battle_builder"]

[profile.speed]
inherits = "dev"
opt-level = 0
debug = 0
codegen-units = 256
