[package]
name = "monsim"
version = "0.1.0"
edition = "2021"

[dependencies]
monsim_macros = { path = "monsim_macros", optional = true }
monsim_utils = { path = "monsim_utils" }
bitflags = "2.5.0"
const_format = { version = "0.2.30", optional = true }
chrono = { version = "0.4.24", optional = true }
tap = "1.0.1"
colored = "2.1.0"
dyn-clone = "1.0.17"

[lib]
name = "monsim"
path = "src/lib.rs"

[[bin]]
name = "monsim"
path = "src/main.rs"

[features]
default = ["entity_fetchers"]
debug = ["const_format", "chrono"]
event_gen = ["monsim_macros/event_gen"]
entity_fetchers = ["monsim_macros/entity_fetchers"]
battle_builder = ["monsim_macros/battle_builder"]
always_roll_high = []

[profile.speed]
inherits = "dev"
opt-level = 0
debug = 0
codegen-units = 256
