[package]
name = "monsim_macros"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.95", features = ["extra-traits", "full"]}
quote =  "1.0.18"
proc-macro2 = "1.0.39"