[package]
name = "monsim_macros"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.53"}
quote =  "1.0.35"
proc-macro2 = "1.0.79"
convert_case = "0.6.0"

[features]
default = ["entity_fetchers"]
event_gen = []
entity_fetchers = []
battle_builder = []
